feat: rock spawner integration (wip)